Fixed the bug with jumping; updated information in Portfolio

--- a/flask_src/static/stylesheet/base.css
+++ b/flask_src/static/stylesheet/base.css
@@ -1,6 +1,7 @@
 html {
     font-family: "Dejavu Serif", "Times New Roman", Arial, sans-serif, serif;
     font-size: 20px;
+    min-height: 100%;
 }
 
 body, #navbar {
